[package]
name = "antelope"
version = "0.0.9"
authors = ["Denis 🚀 <denis@pinax.network>", "Yaro <yaro@pinax.network>"]
description = "Antelope Standard Library"
homepage = "https://github.com/pinax-network/antelope.rs"
repository = "https://github.com/pinax-network/antelope.rs"
categories = [ "api-bindings", "cryptography::cryptocurrencies", "data-structures", "parsing", "value-formatting"]
keywords = ["antelope", "blockchain", "crypto"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
default-features = true