[package]
name = "antelope"
version = "0.1.1"
authors = ["Denis <denis@pinax.network>", "Yaro <yaro@pinax.network>"]
description = "Antelope Standard Library"
homepage = "https://github.com/pinax-network/antelope.rs"
repository = "https://github.com/pinax-network/antelope.rs"
categories = [ "api-bindings", "cryptography::cryptocurrencies", "data-structures", "parsing", "value-formatting"]
keywords = ["antelope", "blockchain", "crypto"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.0.0"

[package.metadata.playground]
default-features = true

# to use cargo cmd install cargo-cmd with `cargo install cargo-cmd` and run `cargo cmd check`
[package.metadata.commands]
check = "cargo fmt && cargo clippy -- -D warnings && cargo test"